# pace-algo

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  STRATEGY_BRIEF.md  pyproject.toml  requirements.txt
core/: __init__.py  config.py
deploy_pine/: fx_cascades_validate.pine  fx_chain_validate.pine  fx_ema_validate.pine  fx_gate_validate.pine  fx_primary_validate.pine  pace_algo_fx.pine  pace_algo_v1.pine  pace_algo_v1_skeleton.pine
docs/: BENCHMARK_SUITE.md  COVERAGE_MATRIX.md  IMPROVEMENT_PROTOCOL.md  README.md  SETUP_NOTES.md  _phase_decision_template.md  architecture.md  backtesting_vision.md  colab_auto_push.md  deployment_plan.md  feature_registry.md  fx_module_LOCK.md  index_dipbuy_LOCK.md  model_registry.md  module_registry.md  phase10_universality_findings.md  phase3_4_state_and_goalfit.md  pine_constraints.md  pine_router_design.md  product_rethink_2026-06-01.md  roadmap.md  roadmap_2026-06-01.md  system_design_v2_state_driven.md  v1_product_backlog.md
notebooks/: 01_fetch_data.ipynb  02_feature_engineering.ipynb  03_asset_clustering.ipynb  04_triple_barrier_labeling.ipynb  05_train_lgbm.ipynb  06_deep_analysis.ipynb  07_experiment_battery.ipynb  08_fx_gold_validation.ipynb  10_pre_export_validation.ipynb  11_phase1_evaluation.ipynb  12_model_battery.ipynb  13_cross_asset_generalization.ipynb  14_multi_tf_deep_dive.ipynb  14b_cutoff_calibration.ipynb  14c_secondary_filter_validation.ipynb  14d_proba_distribution_diagnostic.ipynb  14e_cluster_premium_calibration.ipynb  14f_per_model_behavioral_validation.ipynb  15a_usdchf_deep_dive.ipynb  (+3 more)
results/: README.md
(+356 files in other folders)
