[project]
name = "crux-ml"
version = "0.1.0"
description = "Quantitative ML pipeline for CRUX TradingView indicator"
authors = [{name = "Nico Flotz"}]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "deploy_pine*", "deploy_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
